investigaciones explorador con productos

--- a/investigaciones.html
+++ b/investigaciones.html
@@ -41,7 +41,7 @@
 
         <!-- CONTENIDO APLICACIÓN -->
         <div id="investigacionesApp">
-            <div class="center_box_750">
+            <div class="center_box_920">
                 <!-- FORMULARIO DE BÚSQUEDA -->
                 <div class="search-container">
                     <input class="search-input mb-2" type="text" v-model="q" v-bind:placeholder="`Buscar ` + nombreElemento" autofocus>
@@ -100,16 +100,6 @@
                         </button>
                     </div>
                     <div class="ficha mb-2 shadow">
-                        <div class="ficha-header d-flex justify-content-between">
-                            <div class="p-2" style="border-left: 3em solid rgb(255, 184, 12); margin-left: 3em;">
-                                <img class="logo-orfeo" src="resources/images/observatorio/orfeo.png"
-                                    alt="Logo Orfeo"><strong>Orfeo</strong><br><span
-                                    title="Expediente documental en Orfeo">{{ currentElement['expediente_orfeo'] }}</span>
-                            </div>
-                            <div class="p-2 only-lg"><img class="logo-dogcc"
-                                    src="resources/images/observatorio/logo-dogcc-yellow.png" alt="Logo Observatorio de Cultura">
-                            </div>
-                        </div>
                         <div class="ficha-body">
                             <div class="row">
                                 <div class="col-md-6">
@@ -119,28 +109,31 @@
                                     </p>
                                 </div>
                                 <div class="col-md-6">
-                                    <table>
-                                        <tbody>
-                                            <tr v-for="producto in productos" class="producto"
-                                                v-show="producto['ID Investigación'] == currentElement['ID']">
-                                                <td width="65px" class="text-center">
-                                                    <a v-bind:href="producto['Link para ficha']" target="_blank">
-                                                        <div class="icon-container">
-                                                            <span>
-                                                                <i v-bind:class="getProductoClass(producto['Tipo producto'])"></i>
-                                                            </span>
-                                                        </div>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <a v-bind:href="producto['Link para ficha']" target="_blank">
-                                                        {{ producto['Título'] }}
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <div v-for="producto in productos" class="producto" v-show="displayProducto(producto)">
+                                        <a class="d-flex" v-bind:href="producto['url']" target="_blank">
+                                            <div width="65px" class="text-center me-3">
+                                                <div class="icon-container">
+                                                    <span>
+                                                        <i v-bind:class="getProductoClass(producto['tipo_producto'])"></i>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                {{ producto['titulo'] }}
+                                            </div>
+                                        </a>
+                                    </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="ficha-footer d-flex justify-content-between">
+                            <div class="p-2" style="">
+                                <img class="logo-orfeo me-1" src="resources/images/observatorio/orfeo.png" alt="Logo Orfeo">
+                                <strong>Orfeo: </strong>
+                                <span title="Expediente documental en Orfeo">{{ currentElement['expediente_orfeo'] }}</span>
+                            </div>
+                            <div class="p-2 only-lg"><img class="logo-dogcc"
+                                    src="resources/images/observatorio/logo-dogcc-yellow.png" alt="Logo Observatorio de Cultura">
                             </div>
                         </div>
                     </div>
