DB update 20240924 investigaciones

--- a/investigaciones.html
+++ b/investigaciones.html
@@ -81,7 +81,7 @@
                             <br>
                             <small>
                                 <span class="text-muted">Solicitante: </span>
-                                <span class="text-primary">{{ elemento['entidad_soliciante'] }}</span>
+                                <span class="text-primary">{{ elemento['entidad_solicitante'] }}</span>
                                 &middot;
                                 
                                 <span class="text-muted">Expediente ORFEO: </span>
