--- a/investigaciones.html
+++ b/investigaciones.html
@@ -58,11 +58,11 @@
 
                 <!-- LISTA DE INVESTIGACIONES -->
                 <div v-show="section == 'lista'">
-                    <div class="row mb-2 border-bottom pb-2" v-for="(elemento, i) in elementosFiltrados">
+                    <div class="row mb-4 border-bottom pb-2" v-for="(elemento, i) in elementosFiltrados">
                         <div class="col-md-1">
                             <span class="badge bg-primary">{{ elemento.id }}</span>
                         </div>
-                        <div class="col-md-3 text-end">
+                        <div class="col-md-3">
                             <a v-on:click="setCurrent(elemento.id)" class="pointer">
                                 <img v-bind:src="`projects/investigaciones/thumbnails/` + elemento.id + `.jpg`"
                                     class="w-100 rounded shadow mb-2" v-bind:alt="elemento.titulo"
@@ -80,13 +80,13 @@
             
                             <br>
                             <small>
+                                <span class="text-muted">Año: </span>
+                                <span class="text-primary">{{ elemento['anio'] }}</span>
+
+                                &middot;
+
                                 <span class="text-muted">Solicitante: </span>
                                 <span class="text-primary">{{ elemento['entidad_solicitante'] }}</span>
-                                &middot;
-                                
-                                <span class="text-muted">Expediente ORFEO: </span>
-                                <span class="text-primary">{{ elemento['expediente_orfeo'] }}</span>
-                                &middot;
                             </small>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                 <!-- DETALLE INVESTIGACIÓN -->
                 <div v-show="section == 'ficha'">
                     <div class="mb-2">
-                        <button class="btn btn-light btn-sm" v-on:click="section = 'lista'">
+                        <button class="btn btn-light btn-sm" v-on:click="setSection('lista')">
                             <i class="fas fa-arrow-left"></i> Volver
                         </button>
                     </div>
@@ -141,10 +141,10 @@
                     <!-- HALLAZGOS -->
                     <div class="mt-3 center_box_750">
                         <h4 class="subtitulo">Principales hallazgos</h4>
-                        <div v-for="hallazgo in hallazgos" v-show="hallazgo.investigacion_id == currentElement['id']">
+                        <div v-for="(hallazgo,key) in hallazgosFiltrados">
                             <div class="d-flex justify-content-center">
                                 <div class="w64p color-text-5 text-center">
-                                    <i class="fas fa-chevron-right fa-2x"></i>
+                                    <strong class="display-6">{{ key + 1 }}</strong>
                                 </div>
                                 <div style="max-width:85%">
                                     <p>
