Primera version de explorador de datos clave

--- a/investigaciones.html
+++ b/investigaciones.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="resources/templates/easypml/minimal.css">
     <link rel="stylesheet" href="resources/templates/easypml/mobile.css">
 
+    <!-- ESPECIAL PARA APP -->
     <link rel="stylesheet" href="projects/investigaciones/style.css">
 </head>
 <body>
