--- a/visualizaciones.html
+++ b/visualizaciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos</title>
+    <title>Visualizaciones</title>
     <link rel="shortcut icon" href="resources/images/app/favicon.png"> 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="resources/templates/easypml/mobile.css">
 
     <!-- ESPECIAL PARA APP -->
-    <link rel="stylesheet" href="projects/datos/style.css">
+    <link rel="stylesheet" href="projects/visualizaciones/style.css">
 </head>
 <body>
     <div class="container">
@@ -36,13 +36,13 @@
                     <img src="resources/images/app/logo-navbar.png" alt="Logo App" title="Inicio" class="app-logo">
                 </a>
             </div>
-            <h1 class="page-title">Datos</h1>
+            <h1 class="page-title">Visualizaciones</h1>
             <div>Cultura de Datos</div>
         </div>
 
         <!-- CONTENIDO APLICACIÓN -->
-        <div id="datosApp">
-            <div class="center_box_750">
+        <div id="visualizacionesApp">
+            <div class="center_box_920">
                 <!-- FORMULARIO DE BÚSQUEDA -->
                 <div class="search-container">
                     <input class="search-input mb-2" type="text" v-model="q" v-bind:placeholder="`Buscar ` + nombreElemento" autofocus v-on:change="setSection('lista')">
@@ -52,40 +52,37 @@
                 </div>
 
                 <p class="text-center"><strong class="color-text-1">
-                        {{ elementosFiltrados.length }}</strong> resultados &middot;
-                    <!-- <strong class="color-text-1">{{ productos.length }}</strong>
-                    productos asociados -->
+                        {{ elementosFiltrados.length }}</strong> resultados
                 </p>
 
-                <!-- LISTA DE DATOS -->
+                <!-- LISTA DE VISUALIZACIONES -->
                 <div v-show="section == 'lista'">
                     <div class="row mb-4 border-bottom pb-2" v-for="(elemento, i) in elementosFiltrados">
-                        <div class="col-md-1">
-                            <span class="badge bg-primary">{{ elemento.id }}</span>
-                        </div>
-                        <div class="col-md-3 text-end">
-                            <strong class="display-5">
-                                {{ elemento.valor }}
-                            </strong>
+                        <div class="col-md-4">
+                            <a v-on:click="setCurrent(elemento.id)" class="pointer">
+                                <img v-bind:src="`projects/visualizaciones/thumbnails/` + elemento.id + `.jpg`"
+                                    class="w-100 rounded shadow mb-2" v-bind:alt="elemento.titulo"
+                                    v-bind:onerror="`this.src='resources/images/app/nd.jpg'`">
+                            </a>
                         </div>
                         <div class="col-md-8">
                             <h5 class="card-title text-main">
                                 <a href="#" v-on:click="setCurrent(elemento.id)"
-                                    v-bind:title="`[` + elemento.id + `] ` + elemento.titulo">
-                                    {{ elemento.titulo }}
+                                    v-bind:title="`[` + elemento.id + `] ` + elemento.nombre">
+                                    {{ elemento.nombre }}
                                 </a>
                             </h5>
-                            {{ elemento.texto }}
+                            {{ elemento['descripcion'] }}
             
                             <br>
                             <small>
                                 <span class="text-muted">Año: </span>
-                                <span class="text-primary">{{ elemento['año_dato'] }}</span>
+                                <span class="text-primary">{{ elemento['year_preparacion'] }}</span>
 
                                 &middot;
 
-                                <span class="text-muted">Fuente: </span>
-                                <span class="text-primary">{{ elemento['fuente'] }}</span>
+                                <span class="text-muted">Tema: </span>
+                                <span class="text-primary">{{ elemento['tema'] }}</span>
                             </small>
                         </div>
                     </div>
@@ -93,7 +90,7 @@
             </div>
         </div>
     </div>
-    <script src="projects/datos/script.js"></script>
+    <script src="projects/visualizaciones/script.js"></script>
 </body>
 </html>
 
