--- a/mapas.html
+++ b/mapas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualizaciones</title>
+    <title>Mapas</title>
     <link rel="shortcut icon" href="resources/images/app/favicon.png"> 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,15 +24,81 @@
     <link rel="stylesheet" href="resources/templates/easypml/mobile.css">
 
     <!-- ESPECIAL PARA APP -->
-    <link rel="stylesheet" href="projects/visualizaciones/style.css">
+    <link rel="stylesheet" href="projects/mapas/style.css">
 </head>
 <body>
     <div class="container">
-        <h3>En construcción</h3>
-        <a class="btn btn-light" href="investigaciones.html">
-            Volver
-        </a>
+
+        <!-- ENCABEZADO -->
+        <div class="main-navbar fixed-top d-flex justify-content-between align-items-center">
+            <div class="d-flex">
+                <a href="#">
+                    <img src="resources/images/app/logo-navbar.png" alt="Logo App" title="Inicio" class="app-logo">
+                </a>
+            </div>
+            <h1 class="page-title">Visualizaciones</h1>
+            <div>Cultura de Datos</div>
+        </div>
+
+        <!-- CONTENIDO APLICACIÓN -->
+        <div id="mapasApp">
+            <div class="center_box_920">
+                <!-- FORMULARIO DE BÚSQUEDA -->
+                <div class="search-container">
+                    <input class="search-input mb-2" type="text" v-model="q" v-bind:placeholder="`Buscar ` + nombreElemento" autofocus v-on:change="setSection('lista')">
+                    <button class="search-button" v-show="this.q.length > 0" v-on:click="clearSearch()">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+
+                <ul class="nav justify-content-center nav-tabs mb-3">
+                    <li class="nav-item" v-for="pagina in menu">
+                        <a class="nav-link" v-bind:href="pagina.name" v-bind:class="{'active': pagina.active == true }">
+                            {{ pagina.title }}
+                        </a>
+                    </li>
+                </ul>
+
+                <p class="text-center"><strong class="color-text-1">
+                        {{ elementosFiltrados.length }}</strong> resultados
+                </p>
+
+                <!-- LISTA DE MAPAS -->
+                <div v-show="section == 'lista'">
+                    <div class="row mb-4 border-bottom pb-2" v-for="(elemento, i) in elementosFiltrados">
+                        <div class="col-md-4">
+                            <a v-bind:href="elemento.url" target="_blank">
+                                <img v-bind:src="`projects/mapas/thumbnails/` + elemento.id + `.jpg`"
+                                    class="w-100 rounded shadow mb-2" v-bind:alt="elemento.titulo"
+                                    v-bind:onerror="`this.src='resources/images/app/mapa.jpg'`">
+                            </a>
+                        </div>
+                        <div class="col-md-8">
+                            <h5 class="card-title text-main">
+                                <a v-bind:href="elemento.url"
+                                    v-bind:title="`[` + elemento.id + `] ` + elemento.nombre">
+                                    {{ elemento.nombre }}
+                                </a>
+                            </h5>
+                            {{ elemento['descripcion'] }}
+            
+                            <br>
+                            <small>
+                                <span class="text-muted">Categoría: </span>
+                                <span class="text-primary">{{ elemento['seccion'] }}</span>
+
+                                &middot;
+
+                                <span class="text-muted">Subcategoría: </span>
+                                <span class="text-primary">{{ elemento['subseccion'] }}</span>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="projects/mapas/script.js"></script>
 </body>
 </html>
 
