Join hallazgos, hallazgos i060

--- a/investigaciones.html
+++ b/investigaciones.html
@@ -156,6 +156,7 @@
                                     <strong class="display-6">{{ key + 1 }}</strong>
                                 </div>
                                 <div style="max-width:85%">
+                                    <strong class="text-main">{{ hallazgo.titulo }}</strong>
                                     <p>
                                         {{ hallazgo.texto }}
                                     </p>
