--- a/investigaciones.html
+++ b/investigaciones.html
@@ -25,6 +25,16 @@
 
     <!-- ESPECIAL PARA APP -->
     <link rel="stylesheet" href="projects/investigaciones/style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R0B1T4ZV4K"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-R0B1T4ZV4K');
+    </script>
 </head>
 <body>
     <div class="container">
