Nota matriz de riesgos, powerbi

--- a/visualizaciones.html
+++ b/visualizaciones.html
@@ -105,6 +105,11 @@
                         </div>
                     </div>
                 </div>
+
+                <p class="text-muted text-center">
+                    Los tableros de visualización de datos implementados con PowerBi fueron realizados con la versión desktop de la aplicación
+                    y están cargados en línea mediante la utilización de las licencias oficiales de la Secretaría de Cultura, Recreación y Deporte
+                </p>
             </div>
         </div>
     </div>
