Update investigaciones, lineas investigacion 2023

--- a/investigaciones.html
+++ b/investigaciones.html
@@ -11,6 +11,7 @@
 
     <link href="resources/css/pacarina.css" rel="stylesheet">
     <script src="resources/js/pml_searcher.js"></script>
+    <script src="resources/js/pcrn.js"></script>
     <script src="resources/js/fa_f45fca298e.js"></script>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
